tests/rascal/negative/parse_errors/L4/array-reserved.ob
MODULE Bla;

BEGIN
  ARRAY := 1
END Bla.